# regiface

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: convco.yml  release-plz.yml  rust.yml
regiface/: CHANGELOG.md  Cargo.toml
regiface-macros/: CHANGELOG.md  Cargo.toml
regiface-macros/src/: lib.rs
regiface/src/: byte_array.rs  command.rs  errors.rs  i2c.rs  id.rs  lib.rs  register.rs  register_id.rs  spi.rs
src/: byte_array.rs  embedded_hal.rs  from_slice.rs  i2c.rs  into_slice.rs  lib.rs  slice.rs
