[package]
name = "regiface"
description = "A crate to ease development of interfacing with registers on embedded peripherals "
version = "0.1.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/template-rust"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1"
thiserror = "1.0"
packed_struct = "0.10"
