[package]
name = "regiface"
description = "A crate to ease development of interfacing with registers on embedded peripherals "
version = "0.1.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/template-rust"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1"
embedded-hal-async = "1"
packed_struct = {version = "0", optional = true}
thiserror = "1"

[features]
packed_struct = ["dep:packed_struct"]