[package]
name = "regiface-macros"
description = "This crate implements the macros for the regiface crate"
version = "0.2.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
repository = "https://github.com/BroderickCarlin/regiface"
license = "MIT OR Apache-2.0"

[dependencies]
quote = "1.0"
syn =  { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
default = []
