[package]
name = "regiface"
description = "A crate to ease development of interfacing with registers on embedded peripherals "
version = "0.1.4"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/BroderickCarlin/regiface"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1"
embedded-hal-async = "1"
packed_struct = {version = "0", optional = true, default-features = false}
regiface-macros = {version = "0.1", path = "../regiface-macros"}
thiserror = "2"

[features]
default = []
packed_struct = ["dep:packed_struct"]
